[project]
name = "nano-mooncake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "etcd3",
    "expecttest>=0.3.0",
    "iris",
    "jupyterlab>=4.4.9",
    "pydantic>=2.12.2",
    "pytest>=8.4.2",
    "torch>=2.9.0",
    "triton>=3.4.0",
    "xxhash>=3.6.0",
]

[tool.uv.sources]
iris = { git = "https://github.com/ROCm/iris.git" }
etcd3 = { git = "https://github.com/kragniz/python-etcd3.git" }
